Change input type from text to password

--- a/Code/Login.html
+++ b/Code/Login.html
@@ -68,7 +68,7 @@
                         <div class="field">
                             <label for="AdminPswd" class="label">Password</label>
                             <div class="control has-icons-left">
-                                <input type="text" id="AdminPswd" class="input" placeholder="Faculty_Password">
+                                <input type="password" id="AdminPswd" class="input" placeholder="Faculty_Password">
                                 <span class="icon is-small is-left">
                                     <img src="images/lock.png" alt="">
                                 </span>
