Add monthly pass navbar divisions

--- a/Code/Login.html
+++ b/Code/Login.html
@@ -41,9 +41,19 @@
                 <a href="" class="navbar-item">
                     Check Out
                 </a>
-                <a href="" class="navbar-item">
-                    Monthly Pass
-                </a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link is-arrowless">
+                        Monthly Pass
+                    </a>
+                    <div class="navbar-dropdown">
+                        <a href="" class="navbar-item">
+                            Registrant Check In
+                        </a>
+                        <a href="" class="navbar-item">
+                            New Registrant Application
+                        </a>
+                    </div>
+                </div>
                 <a href="" class="navbar-item">
                     Manage
                 </a>
