Create new JS Folder

--- a/Code/Login.html
+++ b/Code/Login.html
@@ -101,7 +101,7 @@
         menu.classList.toggle('is-active');
         });
     </script>
-    <script src="Login.js"></script>
+    <script src="JS/Login.js"></script>
 </body>
 
 </html>
