--- a/Code/OneTimeCheckIn.html
+++ b/Code/OneTimeCheckIn.html
@@ -131,7 +131,7 @@
             menu.classList.toggle('is-active');
         });
     </script>
-    <script src="OneTimeCheckIn.js"></script>
+    <script src="JS/OneTimeCheckIn.js"></script>
 </body>
 
 </html>
